# win32-version-info

./: Cargo.toml  README.md
examples/: main.rs
src/: lib.rs
