[package]
name = "win32-version-info"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

repository = "https://github.com/Nekomaru-PKU/win32-version-info"
authors = ["Nekomaru <Nekomaru@pku.edu.cn>"]

description = "Retrieve file version info (file description, file version, etc.) from Windows files"
categories = ["filesystem", "os::windows-apis"]
keywords = ["windows", "file", "metadata", "version", "description"]
readme = "README.md"

[dependencies]
windows = { version = "0.58.0", features = ["Win32_Storage_FileSystem"] }

[lints.clippy]
cargo       = { level = "warn", priority = -1 }
nursery     = { level = "warn", priority = -1 }
pedantic    = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }

# lint group `restriction`, intentionally allowed
arithmetic_side_effects = "allow"
as_conversions = "allow"
blanket_clippy_restriction_lints = "allow"
implicit_return = "allow"
indexing_slicing = "allow"
missing_docs_in_private_items = "allow"
missing_inline_in_public_items = "allow"
question_mark_used = "allow"
shadow_reuse = "allow"
shadow_unrelated = "allow"
single_call_fn = "allow"
std_instead_of_alloc = "allow"
std_instead_of_core = "allow"
undocumented_unsafe_blocks = "allow"
unreadable_literal = "allow"
unseparated_literal_suffix = "allow"
